# rgb-matrix-spotify

./: .gitignore  CMakeLists.txt  README.md  run-common.sh  run-quality.sh  run-sim.sh  run.sh  setup.sh
src/: config.cpp  config.hpp  display.cpp  display.hpp  display_mode.cpp  display_mode.hpp  frame_preview.cpp  frame_preview.hpp  http_client.cpp  http_client.hpp  image_renderer.cpp  image_renderer.hpp  main.cpp  now_playing_renderer.cpp  now_playing_renderer.hpp  oauth_server.cpp  oauth_server.hpp  playback_state.cpp  playback_state.hpp  schedule.cpp  schedule.hpp  spotify_client.cpp  spotify_client.hpp  util.cpp  util.hpp  visualizer_renderer.cpp  visualizer_renderer.hpp  web_server.cpp  web_server.hpp
